# blenter

./: .gitignore  CMakeLists.txt  README.md  block.hpp  editor_scene.cpp  editor_scene.hpp  engine.cpp  engine.hpp  level_editor.cpp  level_editor.hpp  main.cpp  object_editor.cpp  object_editor.hpp  objects_scene.cpp  objects_scene.hpp  shapes.cpp  texture.cpp  texture.hpp  ui_scene.cpp  ui_scene.hpp
example/fire/: info.json
example/wall/: info.json
lib/graphics/: animate.cpp  animate.hpp  camera.cpp  camera.hpp  cursor.hpp  entity.cpp  entity.hpp  enum_math.hpp  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  style.cpp  view.cpp  view.hpp  window.cpp  window.hpp
lib/serialize/: cursor_type.hpp  entity.hpp  glm_mat.hpp  glm_vec.hpp  render_mode.hpp  style.hpp  tranform.hpp
shaders/: main_shader.frag  main_shader.vert
